Fix vertical align for legacy browser

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -44,6 +44,6 @@
        Animations Code
    ======================= */
 
-@-webkit-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:70%}}
-@-moz-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:70%}}
-@keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:70%}}
+@-webkit-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:21rem}}
+@-moz-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:21rem}}
+@keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:21rem}}
