--- a/css/style-tablet.css
+++ b/css/style-tablet.css
@@ -12,7 +12,6 @@
 
 .header-separator {
     border-width: 0.2rem;
-    width: 87%;
 }
 
 .header-subtitle {
@@ -43,6 +42,6 @@
        Animations Code
    ======================= */
 
-@-webkit-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:87%}}
-@-moz-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:87%}}
-@keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:87%}}
+@-webkit-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:27rem}}
+@-moz-keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:27rem}}
+@keyframes expand{from{opacity:0;width:5%}to{opacity:1;width:27rem}}
